tests/error/__pragma_without_paren.c
// fail "'__pragma': Expected a '(' after builtin macro '__pragma'."

int _start(){
    int __pragma = 1;
    return __pragma;
}




